Fix Scrollbar issue for mobile

--- a/assets/css/awemenu/awemenu.css
+++ b/assets/css/awemenu/awemenu.css
@@ -62,6 +62,8 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  overflow: auto !important;
+  max-height: 100vh;
 }
 .awemenu:after, .awemenu:before {
   content: '';
@@ -858,4 +860,3 @@
   width: 0;
   left: 50%;
 }
-
